# ROS2

./: ros2
control_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
control_ws/log/: latest_build  latest_list
control_ws/src/diff_drive/: CMakeLists.txt  diff_drive.xml
control_ws/src/diff_drive/hardware/: diffdrive_system.cpp
control_ws/src/motor/: CMakeLists.txt  package.xml
control_ws/src/motor_control/: CMakeLists.txt  motor_control.xml
control_ws/src/motor_control/URDF/: motor.urdf.xacro
control_ws/src/motor_control/config/: motor_controller.yaml
control_ws/src/motor_control/include/motor/: motor_hardware_interface.hpp
control_ws/src/motor_control/src/: motor_hardware_interface.cpp
control_ws/src/motor_control/test/: test_load_motor_hardware_interface.cpp
control_ws/src/three_wheel/: CMakeLists.txt
control_ws/src/three_wheel/hardware/: threewheel_system.cpp
controller_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
controller_ws/log/: latest_build
controller_ws/src/diff_drive_controller/src/: diff_drive_controller.cpp
controller_ws/src/three_omniwheel_controller/src/: odometry.cpp  three_omniwheel_controller.cpp
gazebo/: gazebo.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/course_activities/lib/course_activities/: battery_status  led_panel  new_turtle  number_counter  number_publisher  reset_counter_client
install/course_activities/share/course_activities/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh
install/cpp_pkg/lib/cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oops  add_two_ints_server  cpp_node  robot_news_station  smartphone
install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh
install/mera_robot_bringup/share/mera_robot_bringup/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor/share/motor/: local_setup.sh  package.sh
log/: latest_build
microRos_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microRos_ws/log/: latest_build  latest_list
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/course_activities/: CMakeLists.txt
ros2_ws/src/course_activities/src/: battery_status.cpp  controller.cpp  led_panel.cpp  new_turtle.cpp  number_counter.cpp  number_publisher.cpp  reset_counter_client.cpp
ros2_ws/src/cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/py_pkg/: setup.py
ros2_ws_1/: frames_2025-02-22_20.56.04.gv
ros2_ws_1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws_1/log/: latest_build  latest_list
ros2_ws_1/src/mera_robot_bringup/: CMakeLists.txt
ros2_ws_1/src/my_robot_description/: CMakeLists.txt
turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/log/: latest_build  latest_list
(+333 files in other folders)
